--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-	
+	<title>Contact - Agence la Panthère</title>
 	<script src="./js/jquery-2.1.0.js"></script>
 	<script src="./js/bootstrap.js"></script>
 	<script src="./js/blocs.js"></script>
@@ -34,7 +34,7 @@
 			<div class="navbar-header">
 				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="atlanta web design logo" height="40" /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+					<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
@@ -45,7 +45,7 @@
 					<li>
 					</li>
 					<li>
-						<a href="page2.html">Contact</a>
+						<a href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -53,30 +53,30 @@
 	</div>
 </div>
 <!-- bloc-0 END -->
-
-<!-- bloc-6 -->
-<div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
+<!-- bloc-1-presentation -->
+<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 	<div class="container bloc-lg">
-		<div class="row">
+		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
+				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Agence La Panthère logo web design entreprise lyon"/>
 				<h1 class="text-center hero-bloc-text tc-white">
-					Parlons web design !
+					Contactez-nous !
 				</h1>
-				<p class="text-center mg-lg tc-white tight-width-whitespace">
-					Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
+				<h2 class="hero-bloc-text-sub">
+					Parlons web design : nous sommes ravis que vous souhaitiez collaborer avec notre agence.
 					Parlez-nous de votre projet en complétant le formulaire ci-dessous.
-				</p>
+				</h2>
 			</div>
 		</div>
 	</div>
 </div>
-<!-- bloc-6 END -->
+<!-- bloc-1-presentation END -->
 
 <!-- bloc-7 -->
 <div class="bloc bgc-white l-bloc" id="bloc-7">
 	<div class="container bloc-lg">
 		<div class="row">
-			<div class="col-sm-6">
+			<div class="col-sm-12">
 				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 					<div class="form-group">
 						<label>
@@ -106,7 +106,7 @@
 					</button>
 				</form>
 			</div>
-			<div class="col-sm-6">
+			<div class="col-sm-12">
 				<p>
 					contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 				</p>
