--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<nav class="navbar row">
 			<div class="navbar-header">
 				<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="logo la panthère web design entreprise lyon" height="40" /></a>
-				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+				<button id="nav-toggle" type="button" aria-label="menu" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
@@ -50,6 +50,7 @@
 			</div>
 		</nav>
 	</div>
+</div>
 </div>
 <!-- bloc-0 END -->
 
@@ -76,8 +77,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<h2> L'agence La Panthère est une agence de web design basée à Lyon qui aide les entreprises à devenir attractive et visible sur internet
-			</div>
+				<h2> L'agence La Panthère est une agence de web design basée à Lyon qui aide les entreprises à devenir attractive et visible sur internet</h2>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
 			<div class="col-sm-4">
@@ -224,22 +224,22 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://twitter.com/home" alt="Twitter"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" href="https://twitter.com/home"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.facebook.com/" alt="Facebook"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://dribbble.com/" alt="Dribble"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" href="https://dribbble.com/"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.instagram.com/" alt="Instagram"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
 				</div>
@@ -248,9 +248,7 @@
 	</div>
 </div>
 <!-- Footer - bloc-8 END -->
-
 </div>
 <!-- Principal conteneur END -->
-
 </body>
 </html>
